layout: Fix display width on small screens

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -42,9 +42,16 @@ p { margin: 1em 0; }
 li { margin: 0.4em 0; }
 
 .w {
-  max-width: 50%;
+  width: 100%;
   margin: 0 auto;
   padding: 4em 2em;
+  box-sizing: border-box;
+}
+
+@media (min-width: 1024px) {
+  .w {
+    width: 60%;
+  }
 }
 
 table, th, td {
